--- a/TDDDemo/TDDDemo.vcxproj
+++ b/TDDDemo/TDDDemo.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{29828082-26A6-4477-8EF9-A30D342A299C}</ProjectGuid>
