2. Main implemented with doctest

--- a/TDDDemo/TDDDemo.vcxproj
+++ b/TDDDemo/TDDDemo.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="doctest.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{29828082-26A6-4477-8EF9-A30D342A299C}</ProjectGuid>
